tests/syntax_tests/data/parsing/errors/other/oneElementTuple.res
let faultyTuple = (a, )

switch faultyTuple {
| (a, ) => ()
| _ => ()
}

type faultyTuple = (string, )
